// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestsList Component should handle multiple display states: fulfilled 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "84px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-inventory-list"
        columnHeaders={
          Array [
            "t(curiosity-inventory.header, [object Object])",
            "t(curiosity-inventory.header, [object Object])",
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                "ipsum",
                "sit",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle multiple display states: initial pending 1`] = `
<div
  className="fadein "
>
  <Loader
    skeletonProps={
      Object {
        "size": "sm",
      }
    }
    tableProps={
      Object {
        "borders": false,
        "colCount": 1,
        "rowCount": 1,
        "variant": "compact",
      }
    }
    variant="table"
  />
</div>
`;

exports[`GuestsList Component should handle multiple display states: paged pending 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "84px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <div
        className="curiosity-table-scroll-loader__custom"
      >
        <Loader
          skeletonProps={
            Object {
              "size": "sm",
            }
          }
          tableProps={
            Object {
              "borders": false,
              "colCount": 1,
              "rowCount": 0,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle updating paging state: state 1`] = `
Object {
  "initialState": Object {
    "currentPage": 0,
    "limit": 10,
    "previousData": Array [],
  },
  "scrollComplete": Object {
    "currentPage": 1,
    "limit": 10,
    "previousData": Array [
      Object {
        "dolor": "sit",
        "lorem": "ipsum",
      },
    ],
  },
  "scrollProgress": Object {
    "currentPage": 0,
    "limit": 10,
    "previousData": Array [],
  },
}
`;

exports[`GuestsList Component should handle variations in data: filtered data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-inventory-list"
        columnHeaders={
          Array [
            "t(curiosity-inventory.header, [object Object])",
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                "ipsum",
              ],
            },
            Object {
              "cells": Array [
                "amet",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle variations in data: variable data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-inventory-list"
        columnHeaders={
          Array [
            "t(curiosity-inventory.header, [object Object])",
            "t(curiosity-inventory.header, [object Object])",
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                "ipsum",
                "sit",
              ],
            },
            Object {
              "cells": Array [
                "amet",
                "amet",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should render a non-connected component: non-connected 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "42px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    />
  </div>
</div>
`;
